--- a/View/Shared/Layout/NavMenu.razor
+++ b/View/Shared/Layout/NavMenu.razor
@@ -8,7 +8,7 @@
            OpenChanged="@(value => {if (ThemeHandler.SideOpenMini) { ThemeHandler.SideOpen = value; } })"
            DisableOverlay="true"
            Open="ThemeHandler.SideOpen">
-    <MudDrawerHeader Class="align-center d-flex justify-center pa-0">
+    <MudDrawerHeader Class="align-center d-flex justify-center pa-0 mb-2 mt-2">
         <MudIconButton Color="Color.Primary"
                        Icon="@Icons.Filled.Home"
                        Size="Size.Large"
