--- a/View/Shared/Layout/ProfileMenu.razor
+++ b/View/Shared/Layout/ProfileMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div style="position: absolute; top: 1.4rem; right: 1rem; z-index: 100">
-    <MudMenu AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight">
+    <MudMenu Ref="@_mudMenu" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight">
         <ActivatorContent>
             <MudFab Color="Color.Secondary" StartIcon="@Icons.Material.Filled.Person"/>
         </ActivatorContent>
@@ -26,10 +26,23 @@
 
 @code {
 
+    private MudMenu _mudMenu;
+
     public async Task LogoutAsync()
     {
         await UserService.LogoutAsync();
         NavigationManager.NavigateTo(NavigationProvider["Login"].Link);
     }
+
+    /*protected override async Task OnInitializedAsync()
+    {
+        EventProvider.NavMenuOpened += new EventHandler(CloseProfileMenu);
+    }
+
+    private void CloseProfileMenu(object? sender, EventArgs e)
+    {
+        _mudMenu.CloseMenu();
+        StateHasChanged();
+    }*/
 
 }
