--- a/View/_Imports.razor
+++ b/View/_Imports.razor
@@ -39,7 +39,6 @@
 @inject IJSRuntime JSRuntime
 @inject BrowserService BrowserService
 
-
 @inject UserService UserService
 @inject NavigationManager NavigationManager
 
@@ -54,5 +53,6 @@
 @inject IThemeHandler ThemeHandler
 @inject ProtectedLocalStorage ProtectedLocalStorage
 
+@inject EventProvider EventProvider
 @inject DateManager DateManager
 @inject NavigationProvider NavigationProvider
