--- a/View/Shared/Layout/Footer.razor
+++ b/View/Shared/Layout/Footer.razor
@@ -3,37 +3,34 @@
 <footer>
     <div class="footer-container">
         <div class="footer-element">
-            <h5>Cool websites</h5>
+            <h5>Related</h5>
             <hr length="short"/>
             <div class="space-between">
                 <div class="mr-3">
-                    <div>
-                        <a href="https://cuberto.com/" class="link" youtube-font>cuberto</a>
-                    </div>
-                    <div>
-                        <a href="https://stackoverflow.com/" class="link" youtube-font>
-                            Stack Overflow
-                        </a>
-                    </div>
-                    <div>
-                        <a href="https://www.youtube.com/c/KurzgesagtDE" class="link" youtube-font>
-                            Kurzgesagt
-                        </a>
-                    </div>
+                    @foreach (var related in NavigationProvider.GetPages(PageType.RELATED))
+                    {
+                        <div>
+                            <a href="@related.Link" class="link" youtube-font>@related.Name</a>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
         <div class="footer-element">
-            <h5>Sources</h5>
+            <h5>Architecture</h5>
             <hr length="short"/>
-            <div>
-                <a href="/components/law/quellen.html" class="link" youtube-font>alle Quellen</a>
-            </div>
-            <br/>
             <div class="grid" grid-columns="2">
-                <div>Schriftarten:</div>
+                <div>Framework:</div>
                 <div>
-                    <a href="https://fonts.google.com/" class="link" youtube-font>Google Fonts</a>
+                    <a href="https://learn.microsoft.com/de-de/aspnet/core/?view=aspnetcore-7.0" class="link" youtube-font>ASP.NET Core</a>
+                </div>
+                <div>UI library:</div>
+                <div>
+                    <a href="https://mudblazor.com/" class="link" youtube-font>MudBlazor</a>
+                </div>
+                <div>Database:</div>
+                <div>
+                    <a href="https://www.mongodb.com/" class="link" youtube-font>MongoDB</a>
                 </div>
             </div>
         </div>
@@ -59,7 +56,7 @@
             <strong>
                 <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FT9TT4LP8GD6Y"
                     class="fg-link">
-                    Donate me a beer please! 
+                    Please donate me a beer!
                 </a>
             </strong>
         </div>
@@ -73,10 +70,10 @@
     footer {
       position: relative;
       padding: 5rem 5rem 10rem 5rem;
-      background-color: hsl(220, 10%, 20%);
+      background-color: hsl(220, 10%, 10%);
       font-size: 1rem;
       color: hsl(0, 0%, 100%);
-      min-height: 20rem;
+      min-height: 100vh;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -109,7 +106,7 @@
     }
     footer .footer-vogel {
       position: absolute;
-      left: 50vw;
+      left: 50%;
       -webkit-transform: translateX(-50%);
               transform: translateX(-50%);
       bottom: 1rem;
