--- a/View/Shared/Layout/NavMenuMobile.razor
+++ b/View/Shared/Layout/NavMenuMobile.razor
@@ -21,48 +21,62 @@
         }
     </ul>
     @*<MudSwipeArea OnSwipe="OnSwipe" Sensitivity="30">*@
-        <div class="more">
-            @*<div style="display: flex; justify-content: center; align-items: center; user-select: none; margin-bottom: .5rem">
+    <div class="more">
+        @*<div style="display: flex; justify-content: center; align-items: center; user-select: none; margin-bottom: .5rem">
                 <MudIcon Icon="@Icons.Material.Filled.HorizontalRule"/>
                 @scrollTop
             </div>*@
-            <div style="display: flex; align-items: center; user-select: none; margin-top: .3rem">
-                <MudIconButton OnClick="@ToggleOpen" Icon="@Icons.Material.Filled.KeyboardArrowDown" aria-label="delete"></MudIconButton>
-                <MudText Typo="Typo.h6">More</MudText>
-            </div>
-            <MudList Clickable="true" class="list" ref="@_mudList">
-                <MudListSubheader class="subheadings">
-                    CONTENT
-                </MudListSubheader>
-                @foreach (var pageElement in NavigationProvider.GetPages(PageType.CONTENT))
-                {
-                    <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
-                        @pageElement.Name
-                    </MudListItem>
-                }
-                <MudListSubheader class="subheadings">
-                    FOOTER
-                </MudListSubheader>
-                @foreach (var pageElement in NavigationProvider.GetPages(PageType.FOOTER))
-                {
-                    <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
-                        @pageElement.Name
-                    </MudListItem>
-                }
-                <MudListSubheader class="subheadings">
-                    ACCOUNT
-                </MudListSubheader>
-                @foreach (var pageElement in NavigationProvider.GetPages(PageType.USER))
-                {
-                    <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
-                        @pageElement.Name
-                    </MudListItem>
-                }
-                <MudListItem Icon="@Icons.Material.Filled.Logout" OnClick="LogoutAsync" class="item">
-                    Log out
-                </MudListItem>
-            </MudList>
+        <div style="display: flex; align-items: center; user-select: none; margin-top: .3rem">
+            <MudIconButton OnClick="@ToggleOpen" Icon="@Icons.Material.Filled.KeyboardArrowDown" aria-label="delete"></MudIconButton>
+            <MudText Typo="Typo.h6">More</MudText>
         </div>
+        <MudList Clickable="true" class="list" ref="@_mudList">
+            <MudListSubheader class="subheadings">
+                CONTENT
+            </MudListSubheader>
+            @foreach (var pageElement in NavigationProvider.GetPages(PageType.CONTENT))
+            {
+                <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
+                    @pageElement.Name
+                </MudListItem>
+            }
+
+            @if (_isAdmin)
+            {
+                <MudListSubheader class="subheadings">
+                    ADMIN
+                </MudListSubheader>
+                @foreach (var pageElement in NavigationProvider.GetPages(PageType.ADMIN_CONTENT))
+                {
+                    <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
+                        @pageElement.Name
+                    </MudListItem>
+                }
+            }
+
+            <MudListSubheader class="subheadings">
+                FOOTER
+            </MudListSubheader>
+            @foreach (var pageElement in NavigationProvider.GetPages(PageType.FOOTER))
+            {
+                <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
+                    @pageElement.Name
+                </MudListItem>
+            }
+            <MudListSubheader class="subheadings">
+                ACCOUNT
+            </MudListSubheader>
+            @foreach (var pageElement in NavigationProvider.GetPages(PageType.USER))
+            {
+                <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
+                    @pageElement.Name
+                </MudListItem>
+            }
+            <MudListItem Icon="@Icons.Material.Filled.Logout" OnClick="LogoutAsync" class="item">
+                Log out
+            </MudListItem>
+        </MudList>
+    </div>
     @*</MudSwipeArea>*@
 </div>
 
@@ -76,6 +90,13 @@
 
     private object?[]? _mudList;
     double scrollTop;
+
+    bool _isAdmin;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _isAdmin = await UserService.HasRole("Admin");
+    }
 
     public void ToggleOpen()
     {
